<resources>
    <string name="app_name">极光漫画</string>
    <string name="app_des">超火爆的漫画阅读器</string>
    <string name="app_ad">超火爆的漫画阅读器</string>
    <string name="author">魁地奇信息科技</string>
    <string name="title_about">关于我们</string>
    <string name="title_share_preview">分享预览</string>
    <string name="title_meinv">美女</string>
    <string name="title_mianzeshengming">本软件的所有数据均来自互联网，为了方便大家收集而来，版权归原创者所有，如果侵犯了你的权利，请提供证明并联系我们，我们会第一时间处理。</string>
    <string name="menu_share">分享</string>
    <string name="title_Practice">口语练习</string>
    <string name="title_video_spoken">口语视频</string>
    <string name="title_listening">听力</string>
    <string name="title_intensive_listening">精听</string>
    <string name="title_word_vocabulary">词汇学习</string>
    <string name="title_spoken_english_study">口语学习</string>
    <string name="title_symbol">音标</string>
    <string name="title_word_study">单词</string>
    <string name="title_words">背单词</string>
    <string name="title_word_study_summary">词汇大全</string>
    <string name="title_word_study_vocabulary">词汇</string>
    <string name="title_english_jokes">笑话</string>
    <string name="title_english_video">视频</string>
    <string name="title_english_story">故事</string>
    <string name="title_juhe">综合</string>
    <string name="title_style">样式选择</string>
    <string name="title_more">更多</string>
    <string name="title_all_unit">单元选择</string>
    <string name="title_article_collected">文章</string>
    <string name="title_home_tab">首页</string>
    <string name="title_translate">翻译</string>
    <string name="title_dictionary">词典</string>
    <string name="title_sentence">句海</string>
    <string name="title_english_dic">英英</string>
    <string name="title_chinese_dic">中汉</string>
    <string name="title_study_category">学习</string>
    <string name="title_study">悦读</string>
    <string name="title_listen_fm">悦听</string>
    <string name="title_yuwen">语文</string>
    <string name="title_category">分类</string>
    <string name="title_zhannei">站内</string>
    <string name="title_zhanwai">站外</string>
    <string name="title_leisure">休闲</string>
    <string name="title_instagram">图片分享社区</string>
    <string name="title_cailing">酷炫彩铃</string>
    <string name="title_sougo_wechat">微信英语</string>
    <string name="title_reading">阅读基地</string>
    <string name="title_website">不错的学习网站</string>
    <string name="title_favorite">我的收藏</string>
    <string name="update_title">新版来了</string>
    <string name="update_info">更快、更好用！</string>
    <string name="title_dialog_select">选择场景</string>
    <string name="title_settings">应用设置</string>
    <string name="title_setting">设置</string>
    <string name="title_offline_dic">离线词典</string>
    <string name="title_comments">吐槽评价</string>
    <string name="title_apps">发现APP</string>
    <string name="title_cantonese">粤语</string>
    <string name="title_duanzi">段子笑话</string>
    <string name="title_duanzi_mm">福利</string>
    <string name="title_duanzi_img">图片笑话</string>
    <string name="title_duanzi_gif">小视频</string>
    <string name="title_web_npr">NPR</string>
    <string name="title_web_AmericanLife">AmericanLife</string>
    <string name="title_composition">作文</string>
    <string name="title_ch_dictionary">汉语字典</string>
    <string name="title_dictionary_idiom">成语词典</string>
    <string name="dic_minimalist">精简版词典</string>
    <string name="dic_normal">标准版词典</string>
    <string name="dic_sentence">离线句子翻译</string>
    <string name="title_word_study_change_plan">选择词汇书</string>
    <string name="evaluation_prompt">关于口语评测</string>
    <string name="word_study_detail_menu">听选</string>
    <string name="offline_download">下载Mp3</string>
    <string name="background_color">背景颜色</string>
    <string name="font_color">字体颜色</string>
    <string name="font_size">字体大小</string>
    <string name="font_style">字体样式</string>
    <string name="font_style_left">居左</string>
    <string name="font_style_right">居右</string>
    <string name="font_style_center">居中</string>
    <string name="font_style_bold">粗体</string>
    <string name="font_style_italic">斜体</string>
    <string name="updage_later">稍后</string>
    <string name="updage_now">更新</string>
    <string name="prompt">提示</string>
    <string name="retry">重填</string>
    <string name="recommend">推荐</string>
    <string name="recent_study_empty">赶紧去订阅课程吧</string>
    <string name="recent">订阅</string>
    <string name="beginner">初级</string>
    <string name="intermediate">中级</string>
    <string name="advanced">高级</string>
    <string name="new_concept">新概念</string>
    <string name="menu_mzsm">免责声明</string>
    <string name="menu_settings">语速调节</string>
    <string name="app_name_share">App:极光漫画</string>
    <string name="share_text_hint">请输入分享内容</string>
    <string name="input_et_hint_english">请输入需要查询的英文</string>
    <string name="input_et_hint_chinese">请输入需要查询的中文</string>
    <string name="input_et_hint_dictionary">请输入需要查询的中文或英文</string>
    <string name="input_et_hint">请输入需要翻译的中文或英文</string>
    <string name="input_et_zh_yue_hint">请输入需要翻译的中文或粤语</string>
    <string name="input_et_empty">请输入查询内容</string>
    <string name="ai_chat_input_hint">just say something</string>
    <string name="ai_turing_input_hint">聊五块钱的</string>
    <string name="ch_dic_input_hint">请输入需要查询的文字、词语、成语、诗词</string>
    <string name="ch_dic_idiom_input_hint">请输入需要查询的成语</string>
    <string name="input_translate_hint">请翻译</string>
    <string name="auto_clear_after_translate">翻译完成后自动清空输入框</string>
    <string name="auto_play_after_translate">自动播放翻译结果</string>
    <string name="auto_clear">退出应用删除非收藏记录</string>
    <string name="search">搜索</string>
    <string name="change_books">换课本</string>
    <string name="start_unlock">开始闯关</string>
    <string name="glossary">词汇大全</string>
    <string name="new_and_wrong">生词错词</string>
    <string name="query">查询</string>
    <string name="translate">翻译</string>
    <string name="click_speak">翻译</string>
    <string name="start_to_follow">跟读</string>
    <string name="start">开始</string>
    <string name="listen">听</string>
    <string name="finish">完毕</string>
    <string name="exit_program">再按一次退出应用</string>
    <string name="sentence">单句跟读</string>
    <string name="continuity">连续跟读</string>
    <string name="conversation">对话模式</string>
    <string name="loadmore">正在加载...</string>
    <string name="nomore">没有了!</string>
    <string name="share_dialog_text_1">文字</string>
    <string name="share_dialog_text_2">图片（推荐）</string>
    <string name="take_photo">拍照翻译</string>
    <string name="photo_album">相册选图</string>
    <string name="next_unit">下一单元</string>
    <string name="dancirenzhi">单词认知</string>
    <string name="dancirenzhi_des">学习本单元所有单词</string>
    <string name="dancisuji">听音速记</string>
    <string name="dancisuji_des">听读音记单词</string>
    <string name="dancitingxuan">读音选词</string>
    <string name="word_test_result">测试结果</string>
    <string name="dancitingxuan_des">根据读音选单词</string>
    <string name="danciceshi">单词选义</string>
    <string name="danciceshi_des">根据单词选词义</string>
    <string name="ciyixuanci">词义选词</string>
    <string name="ciyixuanci_des">根据词义选单词</string>
    <string name="pinxie">拼写练习</string>
    <string name="pinxie_des">根据提示拼写单词</string>
    <string name="try_again">再来一次</string>
    <string name="finish_test">打完收工</string>
    <string name="fight_success">闯关成功</string>
    <string name="fight_fail">闯关失败</string>
    <string name="xmly_fm">来源:喜马拉雅</string>
    <string name="speak_english">请点击按钮说英语</string>
    <string name="speak_chinese">请点击按钮说普通话</string>
    <string name="network_error">网络错误，请稍后重试</string>
    <string name="network_offline">网络错误，请检测网络链接</string>
    <string name="no_result">没有查询到结果</string>
    <string name="app_id">50aa1213</string>
    <string name="preference_default_iat_engine_en">sms-en</string>
    <string name="preference_key_iat_rate">iat_rate</string>
    <string name="preference_title_iat_rate">录音采样率</string>
    <string name="preference_default_iat_rate">rate16k</string>
    <string name="preference_key_iat_engine">iat_engine</string>
    <string name="preference_default_iat_engine">iat</string>
    <string name="preference_key_recognizer">recognizer</string>
    <string name="preference_default_recognizer">zh_cn</string>
    <string name="preference_key_accent">accent</string>
    <string name="preference_default_accent">mandarin</string>
    <string name="preference_key_tts_speed">tts_speed</string>
    <string name="play_speed_text">播放语速调节：</string>
    <string name="fifth_normal">50为正常速度</string>
    <string name="i_speak_cantonese">我说粤语</string>
    <string name="clear_all_except_favorite">删除非收藏记录</string>
    <string name="clear_all_record">删除所有记录</string>
    <string name="clear_all">清空</string>
    <string name="invite_friends">还不错，告诉小伙伴</string>
    <string name="invite_friends_qrcode">二维码  扫一扫</string>
    <string name="qq_qun">官方QQ群</string>
    <string name="clear_success">清除成功</string>
    <string name="preference_key_tts_music">tts_music</string>
    <string name="preference_title_tts_music">背景音乐</string>
    <string name="preference_default_tts_music">0</string>
    <string name="preference_dialog_title_tts_music">选择背景音乐</string>
    <string name="tts_toast_format" formatted="false">当前合成进度为%d%%，播放进度为%d%%</string>
    <string name="click_and_speak">点击 说话</string>
    <string name="click_and_finish">点击 完成</string>
    <string name="dele_success">删除成功</string>
    <string name="add_bookshelf_success">加入成功</string>
    <string name="copy_success">复制成功</string>
    <string name="voice">语音</string>
    <string name="copy">复制</string>
    <string name="manage">管理</string>
    <string name="delete">删除</string>
    <string name="empty">清空</string>
    <string name="manage_finish">完成</string>
    <string name="title_free_novel">免费小说</string>
    <string name="title_rank_novel">排行榜</string>
    <string name="title_short_novel">轻小说</string>
    <string name="title_search_novel">无极搜</string>
    <string name="share">分享</string>
    <string name="share_buddy">分享给小伙伴</string>
    <string name="wechat_long_click">微信长按有惊喜</string>
    <string name="favorite_success">收藏成功</string>
    <string name="favorite_cancle">取消收藏</string>
    <string name="dic_tab_juhai">句海</string>
    <string name="dic_tab_cidian">词典</string>
    <string name="dic_tab_shoucang">收藏</string>
    <string name="click_where_unknow">点击单词即可查询词义：</string>
    <string name="close">关闭</string>
    <string name="your_turn">到你啦</string>
    <string name="errcode_success">发送成功</string>
    <string name="errcode_cancel">发送取消</string>
    <string name="errcode_deny">发送被拒绝</string>
    <string name="errcode_unknown">发送返回</string>
    <string name="chinese">中</string>
    <string name="english">英</string>
    <string name="cantonese">粤</string>
    <string name="collect">收藏</string>
    <string name="wechat">微信</string>
    <string name="speak">说</string>
    <string name="speak_prompt">请根据您说的语言点击中文或者英文！</string>
    <string name="webview_reload">加载失败，轻触屏幕刷新!</string>
    <string name="menu_translate">极光漫画</string>
    <string name="menu_speak">口语练习</string>
    <string name="menu_about">关于</string>
    <string name="recent_use_footer_prompt">温馨提示</string>
    <string name="recent_use_footer_prompt_content">\t此处只保存100条最近翻译记录，常用的请收藏。目前的翻译结果都不可能百分百准确，
	    谢谢您的理解，我们会不断改进软件，为您提供更多更好的服务。</string>
    <string name="textclickguidedialog_title">温馨提示</string>
    <string name="textclickguidedialog_content">直接点击翻译内容或结果即可播放语音;语音播放速度可在应用设置里调节。</string>
    <string name="about_play_title">关于语音播报</string>
    <string name="about_play_content">点击文字即可播放相应的内容，点击喇叭默认播放翻译的结果。</string>
    <string name="about_speed_title">关于语音朗读速度</string>
    <string name="about_speed_content">可以在应用设置里面调节语音播放的速度。</string>
    <string name="about_volume_title">关于音量</string>
    <string name="search_history">历史</string>
    <string name="search_xmly_hint">请输入需要搜索的内容</string>
    <string name="click_to_skip">跳过</string>
    <string name="list_empty">空空的，快去添加图书吧</string>
</resources>