<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/cover"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:paddingBottom="12dp"
    android:orientation="vertical">
    <ImageView
        android:id="@+id/cancel_btn"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_gravity="right"
        android:layout_margin="@dimen/padding_margin"
        android:src="@drawable/clear_btn"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/text_black"
        android:gravity="center"
        android:padding="@dimen/padding_15"
        android:textSize="@dimen/biggerx"
        android:text="@string/update_title"
        />
    <TextView
        android:id="@+id/updage_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/text_black1"
        android:lineSpacingExtra="3dp"
        android:lineSpacingMultiplier="1.3"
        android:gravity="center"
        android:text="@string/update_info"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="20dp"
        android:textSize="@dimen/big"
        />
    <TextView
        android:id="@+id/update_btn"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:textColor="@color/white"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/padding_10"
        android:layout_marginBottom="@dimen/padding_5"
        android:gravity="center"
        android:textSize="@dimen/big"
        android:text="@string/updage_now"
        android:background="@drawable/round_light_blue_bgl"
        />

</LinearLayout>