<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    android:gravity="center"
    android:orientation="vertical" >

    <android.support.v7.widget.Toolbar
	    xmlns:app="http://schemas.android.com/apk/res-auto"
	    android:id="@+id/my_awesome_toolbar"
	    android:layout_height="wrap_content"
	    android:layout_width="match_parent"
	    android:minHeight="?attr/actionBarSize"
	    android:background="?attr/colorPrimary" />
    
    <LinearLayout
        android:id="@+id/share_parent_layout"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="30dp" >

        <ImageView
            android:id="@+id/qrcode_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/qrcode"
            />
        
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text_dark"
            android:layout_marginTop="@dimen/padding_15"
            android:textSize="@dimen/bigger"
            android:text="@string/app_name"
            />
        
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text_dark"
            android:layout_marginTop="@dimen/padding_5"
            android:textSize="@dimen/bigger"
            android:text="@string/app_des"
            />
        
        <TextView 
            android:id="@+id/wechat_long_click"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text_grey"
            android:layout_marginTop="40dp"
            android:textSize="@dimen/smaller"
            android:text="@string/wechat_long_click"
            android:visibility="gone"
            />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/share_btn_cover"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:foreground="@drawable/framelayout_selector"
        android:layout_margin="@dimen/padding_5">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:background="?attr/colorPrimary"
            android:textColor="@color/white"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="@dimen/big"
            android:text="@string/share_buddy"
            />
    </FrameLayout>

</LinearLayout>