<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/contentbg"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_awesome_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/theme_color"
        android:minHeight="@dimen/actionBar">

        <TextView
            android:id="@+id/manage_btn"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:text="@string/manage"
            android:layout_gravity="right"
            android:gravity="center"
            android:textSize="@dimen/middle"
            android:textColor="@color/white"
            />
    </android.support.v7.widget.Toolbar>

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/mswiperefreshlayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/contentbg">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/listview"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </android.support.v4.widget.SwipeRefreshLayout>
    <LinearLayout
        android:id="@+id/delete_layout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:background="@color/white"
        android:visibility="gone"
        >
        <TextView
            android:id="@+id/empty_btn"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@color/white"
            android:layout_marginLeft="1px"
            android:background="@color/holo_orange_light"
            android:textSize="@dimen/big"
            android:text="@string/empty"
            />
        <TextView
            android:id="@+id/delete_btn"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@color/white"
            android:background="@color/material_color_red"
            android:textSize="@dimen/big"
            android:text="@string/delete"
            />
    </LinearLayout>
</LinearLayout>