<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:fresco="http://schemas.android.com/apk/res-auto"
    android:id="@+id/parent_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    >
    <LinearLayout 
        android:id="@+id/app_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/padding_20"
        android:layout_marginBottom="@dimen/padding_20"
        >
	    <ImageView 
	        android:layout_width="45dp"
	        android:layout_height="45dp"
	        android:src="@mipmap/ic_launcher"
	        android:layout_marginLeft="20dp"
	        />
	    <LinearLayout
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="@dimen/padding_10"
	        android:orientation="vertical" >
	        <TextView
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_marginBottom="@dimen/padding_5"
	            android:gravity="left"
	            android:text="@string/app_name"
	            android:textColor="@color/text_black1"
	            android:textSize="16sp"
	            android:textStyle="bold" />
	        <TextView
	            android:id="@+id/subtitle"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:gravity="left"
	            android:text="@string/app_des"
	            android:textColor="@color/text_black1"
	            android:textSize="12sp"/>
	    </LinearLayout>
    </LinearLayout>

	<FrameLayout
		android:id="@+id/splash_container"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_above="@id/app_logo"
		>
		<com.facebook.drawee.view.SimpleDraweeView
			android:id="@+id/ad_img"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:adjustViewBounds="true"
			fresco:actualImageScaleType="fitXY" />
		<TextView
			android:id="@+id/ad_source"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="bottom|left"
			android:background="@color/none_alpha"
			android:paddingLeft="1dp"
			android:textColor="@color/white"
			android:textSize="@dimen/smaller_l"
			android:visibility="gone"
			android:text="广告"
			/>
	</FrameLayout>

	<TextView
		android:id="@+id/skip_view"
		android:layout_width="42dp"
		android:layout_height="wrap_content"
		android:layout_alignParentRight="true"
		android:layout_alignParentTop="true"
		android:layout_marginRight="10dp"
		android:layout_marginTop="@dimen/padding_20"
		android:background="@drawable/background_circle"
		android:clickable="true"
		android:gravity="center"
		android:text="@string/click_to_skip"
		android:textColor="@color/white"
		android:visibility="gone"
		android:textSize="@dimen/small"/>
</RelativeLayout>