<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/contentbg">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_awesome_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/theme_color"
        android:minHeight="@dimen/actionBar">
        <FrameLayout
            android:id="@+id/search_btn"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_gravity="right"
            android:foreground="@drawable/framelayout_selector"
            >
            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                app:srcCompat="@drawable/ic_search_white_24dp"
                android:layout_gravity="center"
                />
        </FrameLayout>
    </android.support.v7.widget.Toolbar>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/padding_5"
        >
        <FrameLayout
            android:id="@+id/layout_free_novel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:foreground="@drawable/framelayout_selector"
            android:background="@color/white"
            android:layout_marginBottom="@dimen/padding_5"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/big"
                android:textColor="@color/text_black"
                android:gravity="center"
                android:text="@string/title_free_novel"
                android:paddingTop="40dp"
                android:paddingBottom="40dp"
                />
        </FrameLayout>
        <FrameLayout
            android:id="@+id/layout_rank_novel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:foreground="@drawable/framelayout_selector"
            android:background="@color/white"
            android:layout_marginBottom="@dimen/padding_5"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/big"
                android:textColor="@color/text_black"
                android:gravity="center"
                android:text="@string/title_rank_novel"
                android:paddingTop="40dp"
                android:paddingBottom="40dp"
                />
        </FrameLayout>
        <FrameLayout
            android:id="@+id/layout_short_novel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:foreground="@drawable/framelayout_selector"
            android:background="@color/white"
            android:layout_marginBottom="@dimen/padding_5"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/big"
                android:textColor="@color/text_black"
                android:gravity="center"
                android:text="@string/title_short_novel"
                android:paddingTop="40dp"
                android:paddingBottom="40dp"
                />
        </FrameLayout>
        <FrameLayout
            android:id="@+id/layout_search_novel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:foreground="@drawable/framelayout_selector"
            android:background="@color/white"
            android:layout_margin="@dimen/padding_margin"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/big"
                android:textColor="@color/text_black"
                android:gravity="center"
                android:text="@string/title_search_novel"
                android:paddingTop="40dp"
                android:paddingBottom="40dp"
                />
        </FrameLayout>
    </LinearLayout>

</LinearLayout>