<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <android.support.v7.widget.Toolbar
	    android:id="@+id/my_awesome_toolbar"
	    android:layout_height="wrap_content"
	    android:layout_width="match_parent"
		android:paddingLeft="0dp"
	    android:minHeight="?attr/actionBarSize"
	    android:background="?attr/colorPrimary" >
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:gravity="center_vertical"
			android:orientation="horizontal"
			>
			<EditText
				android:id="@+id/search_et"
				android:layout_width="0dp"
				android:layout_height="36dp"
				android:layout_gravity="center_vertical"
				android:layout_weight="1"
				android:layout_margin="0dp"
				android:gravity="left|center_vertical"
				android:paddingLeft="@dimen/padding_5"
				android:background="@color/contentbg"
				android:hint="@string/search_xmly_hint"
				android:textColorHint="@color/text_grey"
				android:textColor="@color/text_black"
				android:focusable="true"
				android:focusableInTouchMode="true"
				android:singleLine="true"
				android:lines="1"
				android:imeOptions="actionSearch"
				/>
			<FrameLayout
				android:id="@+id/search_btn"
				android:layout_width="56dp"
				android:layout_height="match_parent"
				android:foreground="@drawable/framelayout_selector"
				>
				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_gravity="center"
					android:text="@string/search"
					android:textSize="@dimen/big"
					android:textColor="@color/white"
					/>

			</FrameLayout>
		</LinearLayout>
    </android.support.v7.widget.Toolbar>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:background="@color/white"
		android:orientation="vertical">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="38dp"
			android:gravity="center_vertical"
			android:paddingLeft="@dimen/padding_10"
			android:orientation="horizontal"
			android:background="@color/contentbg"
			>
			<TextView
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:text="@string/search_history"
				android:textSize="@dimen/big"
				android:textColor="@color/text_black"
				/>
			<FrameLayout
				android:id="@+id/clear_history"
				android:layout_width="50dp"
				android:layout_height="38dp"
				android:foreground="@drawable/framelayout_selector"
				>
				<ImageView
					android:layout_width="24dp"
					android:layout_height="24dp"
					android:layout_gravity="center"
					android:src="@drawable/delete"
					/>
			</FrameLayout>
		</LinearLayout>
		<View
			android:layout_width="match_parent"
			android:layout_height="1dp"
			android:layout_marginBottom="@dimen/padding_5"
			android:background="@color/text_tint2"
			/>
		<com.google.android.flexbox.FlexboxLayout
			android:id="@+id/auto_wrap_layout"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:background="@color/white"
			android:paddingBottom="@dimen/padding_7"
			android:paddingLeft="@dimen/padding_5"
			app:alignItems="center"
			app:alignContent="flex_start"
			app:flexDirection="row"
			app:justifyContent="flex_start"
			app:showDivider="beginning|middle"
			app:flexWrap="wrap">
		</com.google.android.flexbox.FlexboxLayout>
	</LinearLayout>

</LinearLayout>